--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -1,11 +1,8 @@
 .Modal{
   position: absolute;
-  bottom: 0;
   left: 0;
   width: 100%;
   height: 80vh;
-  background-color: white;
-  border-radius: 2rem 2rem 0 0;
   >.Modal__head{
     display: flex;
     align-items: center;
@@ -19,6 +16,16 @@
       border-radius: 0.5rem;
     }
   }
+  >.Modal__bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    z-index: -1;
+    border-radius: 2rem 2rem 0 0;
+  }
   >.Modal__content{
     height: 100%;
     overflow: auto;
@@ -26,7 +33,7 @@
   }
 }
 
-.modalBg{
+.modalExternalBg{
   position: absolute;
   top: 0;
   left: 0;
@@ -37,7 +44,7 @@
   transition: all .5s;
 }
 
-.modalBg--active{
+.modalExternalBg--active{
   background-color: rgb(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
 }
