--- a/src/components/Experiences.astro
+++ b/src/components/Experiences.astro
@@ -21,7 +21,7 @@ import ModalBtn from "./ModalBtn";
       <p>Encargado del <b>análisis, diseño e implementación</b> de nuevas features y sistemas. Desde el estado inicial de la idea hasta la subida a producción.</p>
     </div>
     <div class="crowmie__link">
-      <ModalBtn client:visible>
+      <ModalBtn client:visible target="Crowmie" >
         <div>
           <span>Ver más</span>
           <ShortArrow/>
