--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -1,26 +1,26 @@
-.Modal{
+.Modal {
   position: absolute;
   left: 0;
   width: 100%;
   height: 80vh;
-  >.Modal__head{
+  > .Modal__head {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     cursor: pointer;
     height: 51px;
-    >.Modal__closeLine{
+    > .Modal__closeLine {
       width: 8rem;
-      height: .3rem;
+      height: 0.3rem;
       background-color: rgb(173, 173, 173);
       border-radius: 0.5rem;
     }
-    >.Modal__closeLine--desktop{
+    > .Modal__closeLine--desktop {
       display: none;
     }
   }
-  >.Modal__bg{
+  > .Modal__bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -30,35 +30,35 @@
     z-index: -1;
     border-radius: 2rem 2rem 0 0;
   }
-  >.Modal__content{
+  > .Modal__content {
     height: calc(100% - 51px);
     overflow: auto;
     padding: 0 2rem;
   }
 }
 
-.Modal--desktop{
+.Modal--desktop {
   left: unset;
   right: 0;
   width: 550px;
-  >.Modal__head{
-    >.Modal__closeLine--desktop{
+  > .Modal__head {
+    > .Modal__closeLine--desktop {
       display: flex;
       align-items: center;
       width: 100%;
       padding-left: 1.5rem;
-      gap: .5rem;
+      gap: 0.5rem;
     }
-    >.Modal__closeLine{
+    > .Modal__closeLine {
       display: none;
     }
   }
-  >.Modal__bg{
+  > .Modal__bg {
     border-radius: 0;
   }
 }
 
-.modalExternalBg{
+.modalExternalBg {
   position: absolute;
   top: 0;
   left: 0;
@@ -66,10 +66,10 @@
   background-color: rgb(0, 0, 0, 0);
   backdrop-filter: blur(0px);
   z-index: 999;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
-.modalExternalBg--active{
+.modalExternalBg--active {
   background-color: rgb(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
 }
