--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -1,44 +1,65 @@
 // General styles
-.CCard{
-  .CCard__Toc{
+.CCard {
+  .CCard__Toc {
     padding: 4rem 0;
-    >h3{
+    > h3 {
       font-size: 1.5rem;
     }
-    >ul{
+    > ul {
       list-style: none;
-      *{
-        color: #0095F6;
+      * {
+        color: #0095f6;
         text-decoration: none;
         list-style: none;
       }
-      >li{
-        span{
-          margin-right: .5rem;
+      > li {
+        span {
+          margin-right: 0.5rem;
           font-size: 1.5rem;
         }
       }
     }
   }
-  >h3{
-    color:red;
+  > h3 {
+    font-size: 1.5rem;
+    margin-top: 3rem;
+  }
+  >h3:first-of-type{
+    margin-top: 0;
+  }
+  .CCard__banner{
+    background-size: cover;
+    min-height: 8.5rem;
+  }
+  #BannerCrowmieTasks{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    *{
+      color: white;
+    }
+    >div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      >span{
+        margin-top: .3rem;
+      }
+    }
   }
 }
 
-
-
-
 // Specific styles
-.CCrowmie{
-  >.CCrowmie__mainTitle{
+.CCrowmie {
+  > .CCrowmie__mainTitle {
     font-weight: 400;
     text-align: center;
     font-size: 1rem;
-    >span{
+    > span {
       font-size: 4rem;
       font-weight: 800;
       font-style: italic;
-      line-height: .8;
+      line-height: 0.8;
     }
   }
 }
