--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -31,6 +31,17 @@
     background-size: cover;
     min-height: 8.5rem;
   }
+  >p{
+    line-height: 1.6;
+    >ul >li{
+      margin-left: 1.5rem;
+      list-style: disc;
+      margin-bottom: .5rem;
+    }
+    >ul>li:last-child{
+      margin-bottom: 0;
+    }
+  }
   #BannerCrowmieTasks{
     display: flex;
     justify-content: space-around;
