--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -42,19 +42,22 @@
       margin-bottom: 0;
     }
   }
-  #BannerCrowmieTasks{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    *{
-      color: white;
+  .CCard__Technologies{
+    padding: .6rem 0;
+    h4{
+      font-weight: 400;
+      margin-bottom: .3rem;
     }
-    >div{
+    >ul{
+      list-style: none;
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      >span{
-        margin-top: .3rem;
+      flex-wrap: wrap;
+      gap: .3rem;
+      row-gap: .2rem;
+      >li{
+        background-color: #dcdcdc;
+        border-radius: 5rem;
+        padding: .3rem .8rem;
       }
     }
   }
@@ -72,5 +75,34 @@
       font-style: italic;
       line-height: 0.8;
     }
+  }
+}
+
+#BannerCrowmieTasks{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  *{
+    color: white;
+  }
+  >div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    >span{
+      margin-top: .3rem;
+    }
+  }
+}
+
+#BannerCrowmieTechs{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  font-size: 4rem;
+  font-weight: 100;
+  >span{
+    text-shadow: 0px 0px 13px rgba(0, 0, 0, 1);
   }
 }
