--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -61,6 +61,17 @@
       }
     }
   }
+  .Ccard__goals{
+    list-style: none;
+    *{
+      line-height: 1.6;
+    }
+    ul{
+      margin-left: 1.5rem;
+      margin-bottom: .5rem;
+      list-style: disc;
+    }
+  }
 }
 
 // Specific styles
@@ -100,7 +111,7 @@
   justify-content: space-around;
   align-items: center;
   color: white;
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 100;
   >span{
     text-shadow: 0px 0px 13px rgba(0, 0, 0, 1);
