--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -58,11 +58,23 @@
         background-color: #dcdcdc;
         border-radius: 5rem;
         padding: .3rem .8rem;
+        font-size: .8rem;
       }
     }
   }
   .Ccard__goals{
     list-style: none;
+    h4{
+      color: #959595;
+      margin-bottom: .5rem;
+      margin-top: 3rem;
+    }
+    h5{
+      font-size: 1rem;
+      font-weight: 700;
+      margin-top: 1.5rem;
+      color: #00416b;
+    }
     *{
       line-height: 1.6;
     }
@@ -70,6 +82,9 @@
       margin-left: 1.5rem;
       margin-bottom: .5rem;
       list-style: disc;
+    }
+    img{
+      width: 100%;
     }
   }
 }
@@ -115,5 +130,22 @@
   font-weight: 100;
   >span{
     text-shadow: 0px 0px 13px rgba(0, 0, 0, 1);
+  }
+}
+
+#BannerCrowmieRocket{
+    height: 8.5rem;
+    overflow: hidden;
+    position: relative;
+  >div{
+    position: absolute;
+    height: 200%;
+    width: 200%;
+    top: -50%;
+    left: -50%;
+    transform: rotate(-16deg);
+    background-size: cover;
+    background-position: center;
+    background-position: top 45% right 48px;
   }
 }
