--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,8 +18,8 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500;700&family=Montserrat:ital,wght@100,300;0,400;0,700;1,800&display=swap" rel="stylesheet">		
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500;700&family=Montserrat:ital,wght@100,300;0,400;0,700;1,800&display=swap" rel="stylesheet">		
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -32,6 +32,7 @@ const { title } = Astro.props;
 		font-family: system-ui, sans-serif;
 		background: #000000;
 		background-size: 224px;
+		scroll-behavior: smooth;
 	}
 	header *{
 		font-family: 'Be Vietnam Pro', sans-serif !important;
