--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -124,8 +124,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    >svg{
+      filter: drop-shadow(0 0 8px black);
+    }
     >span{
       margin-top: .3rem;
+      text-shadow: 0 0 10px black;
+    }
+    @media screen and (max-width: 520px){ 
+     >span{
+      display: none;
+     } 
+     >svg{
+      height: 2rem;
+     }
     }
   }
 }
