--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,7 +1,7 @@
 ---
 import Chips from "./Chips.astro";
 import StandardArticle from "./StandardArticle.astro";
-import me from '../assets/aboutMe.png'
+import me from '../assets/aboutMe.webp'
 import { Image } from "astro:assets";
 import Training from "./Training.astro";
 import Github from "./icons/Github"
