--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import code from "../assets/code.jpg";
+import code from "../assets/code.webp";
 import Github from "./icons/Github";
 import Linkedin from "./icons/Linkedin";
 import Mail from "./icons/Mail";
