--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import HeroArrow from "./HeroArrow";
 import HeroTitles from "./HeroTitles";
-import me from '../assets/meHero.png'
+import me from '../assets/meHero.webp'
 
 ---
 
