--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -18,7 +18,7 @@
           margin-right: 0.5rem;
           font-size: 1.5rem;
         }
-        >ul{
+        > ul {
           margin-left: 1.5rem;
         }
       }
@@ -28,71 +28,71 @@
     font-size: 1.5rem;
     margin-top: 3rem;
   }
-  >h3:first-of-type{
+  > h3:first-of-type {
     margin-top: 0;
   }
-  .CCard__banner{
+  .CCard__banner {
     background-size: cover;
     min-height: 8.5rem;
   }
-  >p{
+  > p {
     line-height: 1.6;
   }
-  >ul >li{
+  > ul > li {
     margin-left: 1.5rem;
     list-style: disc;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
   }
-  >ul>li:last-child{
+  > ul > li:last-child {
     margin-bottom: 0;
   }
-  .CCard__Technologies{
-    padding: .6rem 0;
-    h4{
+  .CCard__Technologies {
+    padding: 0.6rem 0;
+    h4 {
       font-weight: 400;
-      margin-bottom: .3rem;
+      margin-bottom: 0.3rem;
     }
-    >ul{
+    > ul {
       list-style: none;
       display: flex;
       flex-wrap: wrap;
-      gap: .3rem;
-      row-gap: .2rem;
-      >li{
+      gap: 0.3rem;
+      row-gap: 0.2rem;
+      > li {
         background-color: #dcdcdc;
         border-radius: 5rem;
-        padding: .3rem .8rem;
-        font-size: .8rem;
+        padding: 0.3rem 0.8rem;
+        font-size: 0.8rem;
       }
     }
   }
-  .Ccard__goals{
+  .Ccard__goals {
     list-style: none;
-    h4{
+    h4 {
       color: #959595;
-      margin-bottom: .5rem;
+      margin-bottom: 0.5rem;
       margin-top: 3rem;
     }
-    h5{
+    h5 {
       font-size: 1rem;
       font-weight: 700;
       margin-top: 1.5rem;
       color: #00416b;
     }
-    *{
+    * {
       line-height: 1.6;
     }
-    >li{
+    > li {
       list-style: none;
       margin-left: 0rem;
       margin-bottom: 0;
     }
-    ul{
+    ul {
       margin-left: 1.5rem;
-      margin-bottom: .5rem;
+      margin-bottom: 0.5rem;
       list-style: disc;
     }
-    img{
+    img {
       width: 100%;
     }
   }
@@ -113,69 +113,71 @@
   }
 }
 
-#BannerCrowmieTasks{
+#BannerCrowmieTasks {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  *{
+  * {
     color: white;
   }
-  >div{
+  > div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    >svg{
+    > svg {
       filter: drop-shadow(0 0 8px black);
     }
-    >span{
-      margin-top: .3rem;
+    > span {
+      margin-top: 0.3rem;
       text-shadow: 0 0 10px black;
     }
-    @media screen and (max-width: 520px){ 
-     >span{
-      display: none;
-     } 
-     >svg{
-      height: 2rem;
-     }
+    @media screen and (max-width: 520px) {
+      > span {
+        display: none;
+      }
+      > svg {
+        height: 2rem;
+      }
     }
   }
 }
 
-#BannerCrowmieTechs{
+#BannerCrowmieTechs {
   display: flex;
   justify-content: space-around;
   align-items: center;
   color: white;
   font-size: 3rem;
   font-weight: 100;
-  >span{
+  > span {
     text-shadow: 0px 0px 13px rgba(0, 0, 0, 1);
   }
 }
 
-#BannerCrowmieRocket{
-    height: 8.5rem;
-    overflow: hidden;
-    position: relative;
-    >div{
-      position: absolute;
-      height: 200%;
-      width: 200%;
-      top: -50%;
-      left: -50%;
-      transform: rotate(-16deg);
-      background-size: cover;
-      background-position: center;
-      background-position: top 45% right 48px;
-    }
+#BannerCrowmieRocket {
+  height: 8.5rem;
+  overflow: hidden;
+  position: relative;
+  > div {
+    position: absolute;
+    height: 200%;
+    width: 200%;
+    top: -50%;
+    left: -50%;
+    transform: rotate(-16deg);
+    background-size: cover;
+    background-position: center;
+    background-position: top 45% right 48px;
   }
-  
-#BannerCrowmieHandshake, #BannerCrowmieMarket, #BannerCrowmieReferral{
+}
+
+#BannerCrowmieHandshake,
+#BannerCrowmieMarket,
+#BannerCrowmieReferral {
   overflow: hidden;
   height: 8.5rem;
   position: relative;
-  img{
+  img {
     position: absolute;
     top: 50%;
     left: 50%;
