--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -1,7 +1,7 @@
 // General styles
-.CCard {
+.Card {
   padding-bottom: 3rem;
-  .CCard__Toc {
+  .Card__Toc {
     padding: 4rem 0;
     > h3 {
       font-size: 1.5rem;
@@ -31,9 +31,10 @@
   > h3:first-of-type {
     margin-top: 0;
   }
-  .CCard__banner {
+  .Card__banner {
     background-size: cover;
     min-height: 8.5rem;
+    width: 100%;
   }
   > p {
     line-height: 1.6;
@@ -46,7 +47,7 @@
   > ul > li:last-child {
     margin-bottom: 0;
   }
-  .CCard__Technologies {
+  .Card__Technologies {
     padding: 0.6rem 0;
     h4 {
       font-weight: 400;
@@ -66,7 +67,12 @@
       }
     }
   }
-  .Ccard__goals {
+  .Card__Learning{
+    li{
+      list-style-image: url('../../assets/checkSVG.svg');
+    }
+  }
+  .Card__goals {
     list-style: none;
     h4 {
       color: #959595;
@@ -182,5 +188,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+}
+
+#CantastikTitle{
+  img{
+    width: 100%;
+    object-fit: cover;
+    height: 16.5rem;
   }
 }
