--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -112,7 +112,66 @@
       width: 100%;
     }
   }
+  .Card__Links{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: .4rem;
+    margin-top: 1rem;
+    >a{
+      font-size: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: .5rem;
+      font-weight: 700;
+      color: #0095f6;
+      background-color: white;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      border: 1px solid #0095f6;
+      padding: 1rem 0;
+      text-align: center;
+      transition: all .3s ease-in-out;
+      box-shadow: none;
+    }
+    >a:hover{
+      transform: scale(1.03);
+      box-shadow: 0 3px 6px -2px rgb(0 0 0 / 29%);
+    }
+    .Card__Links--itemFill{
+      background-color: #0095f6;
+      color: white;
+      border: none;
+    }
+  } 
+  .Card__Links--odd{
+    :last-child{
+      grid-column: 1/3;
+    }
+  }
 }
+
+
+
+
+// > button {
+//   background-color: #fca311;
+//   font-size: 1rem;
+//   padding: 0.5rem 1rem;
+//   border-radius: 0.5rem;
+//   color: white;
+//   font-weight: 700;
+//   cursor: pointer;
+//   border: none;
+// }
+// > .form__btns--cv {
+//   background-color: transparent;
+//   border: #fca311 1px solid;
+//   color: #fca311;
+// }
+
 
 // Specific styles
 .CCrowmie {
