--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -250,10 +250,23 @@
   }
 }
 
-#CantastikTitle {
+#CantastikTitle, #GameQuizTitle {
   img {
     width: 100%;
     object-fit: cover;
     height: 16.5rem;
+  }
+}
+
+#BannerGameQuizTechs{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  >div{
+    border-radius: 15%;
+    overflow: hidden;
+    box-shadow: 0px 0px 20px 0px #f7df1eb3;
+    width: 5rem;
+    height: 5rem;
   }
 }
