Contact deco hidden in small screens

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -127,6 +127,7 @@ import Mail from "./icons/Mail";
       justify-content: center;
       align-items: center;
       @media screen and (max-width: 1000px) {
+        display: none;
         width: 100%;
         height: min-content;
         padding: 1rem 0;
