--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -112,21 +112,21 @@
       width: 100%;
     }
   }
-  .Card__Links{
+  .Card__Links {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: .4rem;
+    gap: 0.4rem;
     margin-top: 1rem;
-    @media screen and (max-width: 400px){
+    @media screen and (max-width: 400px) {
       display: flex;
       flex-direction: column;
     }
-    >a{
+    > a {
       font-size: 1rem;
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: .5rem;
+      border-radius: 0.5rem;
       font-weight: 700;
       color: #0095f6;
       background-color: white;
@@ -137,31 +137,34 @@
       border: 1px solid #0095f6;
       padding: 1rem 0;
       text-align: center;
-      transition: all .3s ease-in-out;
+      transition: all 0.3s ease-in-out;
       box-shadow: none;
     }
-    >a:hover{
+    > a:hover {
       transform: scale(1.03);
       box-shadow: 0 3px 6px -2px rgb(0 0 0 / 29%);
     }
-    .Card__Links--itemFill{
+    .Card__Links--itemFill {
       background-color: #0095f6;
       color: white;
       border: none;
     }
-    .Card__Links--GitHub{
-      background: rgb(20,23,39);
-      background: linear-gradient(128deg, rgba(20,23,39,1) 0%, rgba(53,59,101,1) 100%);
+    .Card__Links--GitHub {
+      background: rgb(20, 23, 39);
+      background: linear-gradient(
+        128deg,
+        rgba(20, 23, 39, 1) 0%,
+        rgba(53, 59, 101, 1) 100%
+      );
       color: white;
     }
-  } 
-  .Card__Links--odd{
-    :last-child{
+  }
+  .Card__Links--odd {
+    :last-child {
       grid-column: 1/3;
     }
   }
 }
-
 
 // Specific styles
 .CCrowmie {
@@ -250,7 +253,8 @@
   }
 }
 
-#CantastikTitle, #GameQuizTitle {
+#CantastikTitle,
+#GameQuizTitle {
   img {
     width: 100%;
     object-fit: cover;
@@ -258,11 +262,11 @@
   }
 }
 
-#BannerGameQuizTechs{
+#BannerGameQuizTechs {
   display: flex;
   justify-content: center;
   align-items: center;
-  >div{
+  > div {
     border-radius: 15%;
     overflow: hidden;
     box-shadow: 0px 0px 20px 0px #f7df1eb3;
