--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -40,6 +40,7 @@
     line-height: 1.6;
   }
   > ul > li {
+    line-height: 1.6;
     margin-left: 1.5rem;
     list-style: disc;
     margin-bottom: 0.5rem;
