--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -109,11 +109,16 @@ import 'react-indiana-drag-scroll/dist/style.css';
 
   .aboutMe{
     position: relative;
+    @media screen and (max-width: 1100px) {
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center;
+      gap: 2rem;
+    }
     @media screen and (max-width: 800px) {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 2rem;
     }
       
     
@@ -146,16 +151,16 @@ import 'react-indiana-drag-scroll/dist/style.css';
         right: -37%;
       }
       @media screen and (max-width: 1100px) {
-        right: -21%;
-      }
-      @media screen and (max-width: 800px) {
         position: relative;
         right: 0;
         top: 0;
-        width: 65%;
-        height: 65%;
+        height: 17rem;
         background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
         border-radius: 50%;
+      }
+      @media screen and (max-width: 800px) {
+        width: 65%;
+        height: 65%;
       }
     }
     .aboutMe__chips{
