links in contact form

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -16,9 +16,15 @@ import Mail from "./icons/Mail";
         <div/>
       </div>
       <div class="contact__icons">
-        <Github client:load size="2rem" />
-        <Linkedin client:load size="2rem" />
-        <Mail client:load size="2rem"/>
+        <a target="_blank" href="https://github.com/MrSetOne">
+          <Github client:load size="2rem" />
+        </a>
+        <a target="_blank" href="#https://www.linkedin.com/in/michaellaras/">
+          <Linkedin client:load size="2rem" />
+        </a>
+        <a target="_blank" href="mailto:lara.sanchez.michael@gmail.com">
+          <Mail client:load size="2rem"/>
+        </a>
       </div>
     </div>
   </div>
