--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -33,21 +33,29 @@ import me from '../assets/meHero.webp'
 
 <style lang="scss">
   header{
-		height: 80vh;
+		height: 100svh;
 		position: relative;
 		overflow: hidden;
+		display: flex;
+		justify-content: center;
+		gap: 2rem;
+		align-items: center;
 		background-color: #d2d4d3;
+		>.hello__text, img{
+			transform: translatey(-7vh);
+			@media screen and (max-width: 800px){
+				transform: translatey(0);
+				
+			}
+		}
 		
 		.hello__text{
 			z-index: 1;
 			position: relative;
-			height: 100%;
 			display: flex;
 			flex-direction: column;
 			justify-content: flex-start;
 			line-height: .9;
-			padding-top: 16rem;
-			padding-left: 16rem;
 			width: fit-content;
 
 			>span{
@@ -64,11 +72,11 @@ import me from '../assets/meHero.webp'
 		}
 		img{
 			z-index: 0;
-			width: 100vh;
-			height: auto;
-			bottom: 0;
-			right: 0;
-			position: absolute;
+			width: 30vw;
+			height: 30vw;
+			border: 1px solid #000;
+			border-radius: 50%;
+			box-shadow: 20px 20px 0 0px #717171;
 			filter: grayscale(100%);
 		}
 		.hero__deco{
@@ -85,13 +93,6 @@ import me from '../assets/meHero.webp'
 			left: 0;
 		}
 	}
-	@media (max-width: 1800px){
-		header{
-			img{
-				right: -20%;
-			}
-		}
-	}
 
 	@media (max-width: 1400px){
 		header{
@@ -101,16 +102,9 @@ import me from '../assets/meHero.webp'
 		}
 	}
 
-	@media (max-width: 1050px){
-		header{
-			img{
-				right: -40%;
-			}
-		}
-	}
-
 	@media (max-width: 800px){
 		header{
+			align-items: flex-start;
 			.hello__text{
 				justify-content: flex-start;
 				align-items: center;
@@ -127,6 +121,15 @@ import me from '../assets/meHero.webp'
 			img{
 				width: auto;
 				height: calc(80vh - 4rem);
+				right: -12%;
+				position: absolute;
+				bottom: 0;
+				border: none;
+				box-shadow: none;
+				border-radius: 0%;
+				@media screen and (max-width: 400px) {
+					right: -40%;
+				}
 			}
 		}
 	}
