--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -123,6 +123,8 @@ import 'react-indiana-drag-scroll/dist/style.css';
       
     
     .aboutMe__text{
+      position: relative;
+      z-index: 1;
       width: calc(100% - 20rem);
       display: flex;
       flex-direction: column;
@@ -141,7 +143,7 @@ import 'react-indiana-drag-scroll/dist/style.css';
       }
     }
     .aboutMe__image{
-      z-index: -1;
+      z-index: 0;
       height: 37rem;
       width: auto;
       position: absolute;
