--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const { title } = Astro.props;
 		<meta property="og:locale" content="es_ES">
 		<meta property="og:title" content="Michael Lara Sánchez">
 		<meta property="og:description" content="¡Visita mi nuevo portfolio! Espero que te guste :)">
-		<!-- RELLENA LA IMAGEN QUE FALTA -->
+		<!-- TODO: RELLENA LA IMAGEN QUE FALTA -->
 		<!-- <meta property="og:image" content="https://michaellara.es/og-image.jpg" /> -->
 		<meta property="og:image" content="https://portfolio2023-git-main-mrsetone.vercel.app/og-image.jpg" />
 		<meta property="og:image:alt" content="Michael Lara Sánchez" />
