--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -113,7 +113,7 @@ import SimpleCode from "./icons/SimpleCode.astro";
   </div>
 </article>
 <StandardArticle isBtn>
-  <a href="https://github.com/MrSetOne" target="_blank" class="linkedIn">
+  <a href="https://www.linkedin.com/in/michaellaras/" target="_blank" class="linkedIn">
     <div>
       <Linkedin client:load size="40%" />
       <span>Conecta conmigo en</span>
