--- a/src/components/Training.astro
+++ b/src/components/Training.astro
@@ -1,124 +1,8 @@
 ---
 
-import Dot from "./icons/Dot.astro";
+import Accordion from "./TrainingAccordion";
 
 ---
 <div class="training">
-  <div id="line"/>
-  <ul class="training__list">
-    <li class="training__item" >
-      <div class="trainingItem__header">
-        <div class="dotItem" />
-        <span>
-          2023
-        </span>
-        <h3>DevTalles - Flutter Móvil: De cero a experto (En curso)</h3>
-      </div>
-      <p class="trainingItem__description" >Formación de 50 horas practicas sobre el uso del lenguaje Dart y el framework Flutter para el desarrollo de aplicaciones para IOS y Android.</p>
-    </li>
-    <li class="training__item" >
-      <div class="trainingItem__header">
-        <div class="dotItem" />
-        <span>
-          2022
-        </span>
-        <h3>The Bridge - Full Stack Development</h3>
-      </div>
-      <p class="trainingItem__description" >Formación de 480 horas de entrenamiento práctico de desarrollo web Full Stack (Frontend y Backend). Uso de frameworks y librerías como NodeJs y React, despliegue en entornos Cloud y bases de datos, tanto relacionales como no relacionales.</p>
-    </li>
-    <li class="training__item" >
-      <div class="trainingItem__header">
-        <div class="dotItem" />
-        <span>
-          2021    
-        </span>
-        <h3>Udemy - Introducción al desarrollo Web</h3>
-      </div>
-      <p class="trainingItem__description" >Curso de 70h sobre las bases del desarrollo web, donde aprendí principalmente HTML, CSS, Sass y JavaScript.</p>
-    </li>
-    <li class="training__item" >
-    <div class="trainingItem__header">
-      <div class="dotItem" />
-      <span>
-        2014
-      </span>
-      <h3>IES Paco Moyá - Bachillerato de artes</h3>
-    </div>
-  </li>
-</ul>
-</div>
-
-<script is:inline>
-  const dots = document.querySelectorAll('.dotItem')
-  const dotsArray = Array.from(dots)
-  const line = document.getElementById('line')
-
-  const convertLineHeight = () => line.style.height = `${dotsArray[dotsArray.length - 1].offsetTop}px`
-  
-  setTimeout(() => {
-    convertLineHeight()
-  }, 50);
-
-  const stepsDec = document.querySelectorAll('.trainingItem__description')
-  const stepsDecArray = Array.from(stepsDec)
-
-  stepsDecArray.forEach((step, index) => {
-    const dotWidth = dotsArray[index].clientWidth
-    const spanWidth = dotsArray[index].parentElement.children[1].clientWidth
-    const margins = 16
-    step.style.marginLeft = `${dotWidth + spanWidth + margins}px`
-  })
-
-  window.onresize = () => {
-    line.style.height = `${dotsArray[dotsArray.length - 1].offsetTop}px`
-  }
-
-</script>
-
-<style lang="scss">
-  .training{
-    font-size: 1rem;
-    position: relative;
-    .training__list{
-      list-style: none;
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      .training__item{
-        display: flex;
-        flex-direction: column;
-        gap: .4rem;
-        >.trainingItem__header{
-          display: flex;
-          font-weight: 700;
-          .dotItem{
-            flex: none;
-            width: 1rem;
-            height: 1rem;
-            border-radius: 50%;
-            background-color: white;
-            margin-right: .5rem;
-            position: relative;
-          }
-          span{
-            margin-right: .5rem;
-          }
-        }
-        .trainingItem__description{
-          line-height: 1.7
-          ;
-          font-weight: 300;
-        }
-      }
-    }
-    #line{
-      position: absolute;
-      left: calc(.5rem - 2px);
-      top: .5rem;
-      width: 4px;
-      background-color: white;
-    }
-  }
-</style>
-
-
+  <Accordion client:load />
+</div>./TrainingAccordion
