--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -15,6 +15,7 @@ import { ScrollContainer} from "react-indiana-drag-scroll";
 import 'react-indiana-drag-scroll/dist/style.css';
 import SimpleCode from "./icons/SimpleCode.astro";
 import TrainingAcordion from "./TrainingAccordion";
+import GitHubAboutme from "./GitHubAboutme.astro";
 
 
 ---
@@ -42,13 +43,14 @@ import TrainingAcordion from "./TrainingAccordion";
   </div>
 </StandardArticle>
 <StandardArticle isBtn>
-  <a href="https://github.com/MrSetOne" target="_blank" class="gitHub">
+  <GitHubAboutme/>
+  <!-- <a href="https://github.com/MrSetOne" target="_blank" class="gitHub">
     <div>
       <Github client:load size="40%" />
       <span>Visita mi perfil de</span>
       <h2>GitHub</h2>
     </div>
-  </a>
+  </a> -->
 </StandardArticle>
 <StandardArticle cId="AboutmeExperience">
   <a href="#experienceMainBanner" class="AboutmeExperience">
