--- a/src/components/GitHubAboutme.astro
+++ b/src/components/GitHubAboutme.astro
@@ -117,5 +117,9 @@ import bgImage from '../assets/gitScreenShot.jpeg'
       color:#FCA311;
       font-size: min(2.25rem, 6vw);
     }
+    svg{
+      // background-color: red;
+      width: min(17.5rem, 90%);
+    }
   }
 </style>
