--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -16,6 +16,7 @@ import 'react-indiana-drag-scroll/dist/style.css';
 import SimpleCode from "./icons/SimpleCode.astro";
 import TrainingAcordion from "./TrainingAccordion";
 import GitHubAboutme from "./GitHubAboutme.astro";
+import LinkedinAboutme from "./LinkedinAboutme.astro";
 
 
 ---
@@ -44,13 +45,6 @@ import GitHubAboutme from "./GitHubAboutme.astro";
 </StandardArticle>
 <StandardArticle isBtn>
   <GitHubAboutme/>
-  <!-- <a href="https://github.com/MrSetOne" target="_blank" class="gitHub">
-    <div>
-      <Github client:load size="40%" />
-      <span>Visita mi perfil de</span>
-      <h2>GitHub</h2>
-    </div>
-  </a> -->
 </StandardArticle>
 <StandardArticle cId="AboutmeExperience">
   <a href="#experienceMainBanner" class="AboutmeExperience">
@@ -116,13 +110,14 @@ import GitHubAboutme from "./GitHubAboutme.astro";
   </div>
 </article>
 <StandardArticle isBtn>
-  <a href="https://www.linkedin.com/in/michaellaras/" target="_blank" class="linkedIn">
+  <LinkedinAboutme/>
+  <!-- <a href="https://www.linkedin.com/in/michaellaras/" target="_blank" class="linkedIn">
     <div>
       <Linkedin client:load size="40%" />
       <span>Conecta conmigo en</span>
       <h2>Linkedin</h2>
     </div>
-  </a>
+  </a> -->
 </StandardArticle>
 <style lang="scss">
 
