--- a/src/components/GitHubAboutme.astro
+++ b/src/components/GitHubAboutme.astro
@@ -95,7 +95,7 @@ import bgImage from '../assets/gitScreenShot.jpeg'
       align-items: center;
       justify-content: center;
       @media screen and (max-width: 1100px) {
-        aspect-ratio: 1/1 ;
+        // aspect-ratio: 1/1 ;
         padding: 1rem;
         height: auto;
       }
@@ -118,6 +118,7 @@ import bgImage from '../assets/gitScreenShot.jpeg'
       font-size: min(2.25rem, 6vw);
     }
     svg{
+      height: auto;
       // background-color: red;
       width: min(17.5rem, 90%);
     }
